# CleanEnergyProject

./: CleanEnergyProject.postman_collection.json  manage.py  pyproject.toml  readme.md
CleanEnergy/: asgi.py  settings.py  urls.py  wsgi.py
clean_energy_deals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
clean_energy_deals/migrations/: 0001_initial.py
