[tool.poetry]
name = "cleanenergy"
version = "0.1.0"
description = "Dependency Management for CleanEnergyProject"
authors = ["Aditya Panda <adityapandaofficial@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
Django = "5.0.2"
djangorestframework = "3.14.0"
pytz = "2024.1"
sqlparse = "0.4.4"
typing-extensions = "4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
